testsuite/tests/partial-sigs/should_fail/ExtraConstraintsWildcardInPatternSplice.stderr

ExtraConstraintsWildcardInPatternSplice.hs:5:6: error:
    • Found type wildcard ‘_’ standing for ‘w’
      Where: ‘w’ is a rigid type variable bound by
               the inferred type of foo :: w -> ()
               at ExtraConstraintsWildcardInPatternSplice.hs:5:1-29
      To use the inferred type, enable PartialTypeSignatures
    • In a pattern type signature: _
      In the pattern: _ :: _
      In an equation for ‘foo’: foo (_ :: _) = ()
    • Relevant bindings include
        foo :: w -> ()
          (bound at ExtraConstraintsWildcardInPatternSplice.hs:5:1)
